Update page loading auto-disable buttons and styling, moved inline scripts to root, fixed app page, refactored all cover pages to be standardized, refactored checkout, moved complete (loading remover) to AFTER loading async scripts, added new spacing classes for width, new migrate command, new method for minifty html thats faster, added some good SEO pages like wellknown etc, refactored cover layout, new surcemap logic (disable in production)
Update page loading auto-disable buttons and styling, moved inline scripts to root, fixed app page, refactored all cover pages to be standardized, refactored checkout, moved complete (loading remover) to AFTER loading async scripts, added new spacing classes for width, new migrate command, new method for minifty html thats faster, added some good SEO pages like wellknown etc, refactored cover layout, new surcemap logic (disable in production)

--- a/src/assets/css/core/utilities.scss
+++ b/src/assets/css/core/utilities.scss
@@ -12,7 +12,9 @@
 
 .disabled,
 [disabled],
-:disabled {
+:disabled,
+[data-page-loading] button.btn,
+[data-page-loading] .btn-action {
   cursor: not-allowed !important;
   pointer-events: all !important;
 
@@ -21,6 +23,12 @@
   * {
     pointer-events: none !important;
   }
+}
+
+[data-page-loading] button.btn,
+[data-page-loading] .btn-action {
+  opacity: var(--bs-btn-disabled-opacity);
+  color: var(--bs-btn-disabled-color);
 }
 
 // Prevent pointer events on all children inside buttons and links
