--- a/src/assets/css/ultimate-jekyll-manager.scss
+++ b/src/assets/css/ultimate-jekyll-manager.scss
@@ -10,6 +10,7 @@
 // @use 'core/chatsy' as *;
 @use 'core/cookieconsent' as *;
 @use 'core/lazy-loading' as *;
+@use 'core/bindings' as *;
 @use 'core/social-sharing' as *;
 @use 'core/custom-font-awesome' as *;
 
