--- a/src/assets/themes/classy/_config.scss
+++ b/src/assets/themes/classy/_config.scss
@@ -164,7 +164,10 @@ $avatar-sizes: (
   md: 2.5rem,
   lg: 3.5rem,
   xl: 5rem,
-  2xl: 7.5rem
+  2xl: 7.5rem,
+  3xl: 10rem,
+  4xl: 12.5rem,
+  5xl: 15rem
 ) !default;
 
 // Forward Bootstrap with our configuration
