--- a/src/assets/themes/classy/_config.scss
+++ b/src/assets/themes/classy/_config.scss
@@ -184,5 +184,6 @@ $avatar-sizes: (
   $headings-font-weight: $headings-font-weight,
   $border-radius: $border-radius,
   $border-radius-sm: $border-radius-sm,
-  $border-radius-lg: $border-radius-lg
+  $border-radius-lg: $border-radius-lg,
+  $enable-negative-margins: true
 );
