--- a/src/assets/themes/classy/css/base/_spacing.scss
+++ b/src/assets/themes/classy/css/base/_spacing.scss
@@ -28,6 +28,10 @@
 // ============================================
 // Height utilities using viewport height (vh) units
 .vh-50 { height: 50vh !important; }
+.vh-75 { height: 75vh !important; }
+.vh-80 { height: 80vh !important; }
+.vh-90 { height: 90vh !important; }
+.vh-100 { height: 100vh !important; }
 
 // Min-Height utilities using viewport height (vh) units
 .min-vh-50 { min-height: 50vh !important; }
