--- a/src/assets/themes/classy/css/components/_accordion.scss
+++ b/src/assets/themes/classy/css/components/_accordion.scss
@@ -6,18 +6,29 @@
 // ============================================
 .accordion-item {
   background-color: var(--bs-secondary-bg);
+  border-radius: var(--bs-accordion-border-radius) !important;
+  margin-bottom: 0.5rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .accordion-button {
   background-color: var(--bs-secondary-bg);
+  border-radius: var(--bs-accordion-border-radius) !important;
 
   &:not(.collapsed) {
     background-color: var(--bs-secondary-bg);
+    border-bottom-left-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
   }
 }
 
 .accordion-body {
   background-color: var(--bs-secondary-bg);
+  border-bottom-left-radius: var(--bs-accordion-border-radius) !important;
+  border-bottom-right-radius: var(--bs-accordion-border-radius) !important;
 }
 
 // Light mode icons
