--- a/src/assets/css/ultimate-jekyll-manager.scss
+++ b/src/assets/css/ultimate-jekyll-manager.scss
@@ -20,6 +20,7 @@
 @use 'core/_animations' as *;
 @use 'core/_alert' as *;
 @use 'core/_exit-popup' as *;
+@use 'core/_verts' as *;
 
 // Import page-specific styles
 @use '_page-specific' as *;
