--- a/src/assets/themes/classy/css/layout/_navigation.scss
+++ b/src/assets/themes/classy/css/layout/_navigation.scss
@@ -130,6 +130,8 @@
     transition: all 0.2s ease;
     position: relative;
     color: var(--bs-body-color);
+    width: 100%;
+    text-align: left;
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.05);
